<resources>
    <string name="app_name">MHGU Database</string>
    <string name="app_name_launcher">MHGUDB</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Database</string>
    <string name="filter_hint">Filter…</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="submit">Submit</string>
    <string name="undo">Undo</string>
    <string name="about">About</string>
    <string name="about_version">Version %s</string>
    <string name="about_message">
        Gathering Hall Studios is an open source team of designers and developers
        dedicated to building high-quality apps for the Monster Hunter series.
        Contact us at contact@gatheringhallstudios.com or visit our Discord.
    </string>
    <string name="value_zenny">%dz</string>
    <string name="placeholder_unknown">Unknown</string>
    <string name="filter_final_option">Final Only</string>
    <string name="empty_message">No Data</string>
    <string name="list_empty_message">Insufficient materials.</string>
    <string name="dialog_message_delete">\"%s\" will be deleted.</string>
    <string name="dialog_message_delete_multi">These %d items will be deleted.</string>
    <string name="dialog_message_copy">\"%s\" will be duplicated.</string>
    <string name="dialog_message_copy_multi">These %d items will be duplicated.</string>
    <string name="exit_title">Abandon Quest</string>
    <string name="exit_dialog">Stop the Quest and return to town?</string>
    <string name="exit_confirm">Yes</string>
    <string name="exit_cancel">No</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="type_location">Location</string>
    <string name="type_monster">Monster</string>
    <string name="type_quest">Quest</string>
    <string name="type_skill_tree">Skill Tree</string>
    <string name="type_item">Item</string>
    <string name="type_weapon">Weapon</string>
    <string name="type_armor">Armor</string>
    <string name="type_armor_set">Armor Set</string>
    <string name="type_armor_set_gunner">Armor Set (Gunner)</string>
    <string name="type_armor_set_blade">Armor Set (Blade)</string>
    <string name="type_decoration">Decoration</string>
    <string name="type_palico_weapon">Palico Weapon</string>
    <string name="type_palico_armor">Palico Armor</string>
    <string name="type_material">Material</string>
    <string name="type_hub_village">Village</string>
    <string name="type_hub_guild">Guild</string>
    <string name="type_hub_event">Event</string>
    <string name="type_hub_arena">Arena</string>
    <string name="type_hub_permit">Permit</string>
    <string name="type_weapon_greatsword">Great Sword</string>
    <string name="type_weapon_longsword">Long Sword</string>
    <string name="type_weapon_swordandshield">Sword and Shield</string>
    <string name="type_weapon_dualblades">Dual Blades</string>
    <string name="type_weapon_hammer">Hammer</string>
    <string name="type_weapon_huntinghorn">Hunting Horn</string>
    <string name="type_weapon_lance">Lance</string>
    <string name="type_weapon_gunlance">Gunlance</string>
    <string name="type_weapon_switchaxe">Switch Axe</string>
    <string name="type_weapon_chargeblade">Charge Blade</string>
    <string name="type_weapon_insectglaive">Insect Glaive</string>
    <string name="type_weapon_lightbowgun">Light Bowgun</string>
    <string name="type_weapon_heavybowgun">Heavy Bowgun</string>
    <string name="type_weapon_bow">Bow</string>
    <string name="palicos">Palicos</string>
    <string name="combining">Combining</string>
    <string name="skills">Skills</string>
    <string name="format_plus">%1$+d</string>
    <string name="skill_points">%s %+d</string>
    <string name="skill_points_joined">%s / %s</string>
    <string name="value_rare">Rare %s</string>
    <string name="rank_lr">Low Rank</string>
    <string name="rank_hr">High Rank</string>
    <string name="rank_g">G Rank</string>
    <string name="rank_any">Any</string>
    <string name="ailment_roar_small">Small Roar</string>
    <string name="ailment_roar_large">Large Roar</string>
    <string name="ailment_roar_small_special">Small Special Roar</string>
    <string name="ailment_roar_special">Special Roar</string>
    <string name="ailment_wind_small">Small Wind Pressure</string>
    <string name="ailment_wind_large">Large Wind Pressure</string>
    <string name="ailment_wind_dragon">Dragon Wind Pressure</string>
    <string name="ailment_tremor">Tremor</string>
    <string name="ailment_fire">Fireblight</string>
    <string name="ailment_water">Waterblight</string>
    <string name="ailment_thunder">Thunderblight</string>
    <string name="ailment_ice">Iceblight</string>
    <string name="ailment_dragon">Dragonblight</string>
    <string name="ailment_blast">Blastblight</string>
    <string name="ailment_bleed">Bleeding</string>
    <string name="ailment_poison">Poison</string>
    <string name="ailment_poison_noxious">Noxious Poison</string>
    <string name="ailment_poison_deadly">Deadly Poison</string>
    <string name="ailment_sleep">Sleep</string>
    <string name="ailment_paralysis">Paralysis</string>
    <string name="ailment_stun">Stun</string>
    <string name="ailment_snowman">Snowman</string>
    <string name="ailment_muddy">Muddy</string>
    <string name="ailment_bubbles">Bubbles</string>
    <string name="ailment_boned">Boned</string>
    <string name="ailment_mucus">Mucus</string>
    <string name="ailment_soiled">Soiled</string>
    <string name="ailment_environmental">Environmental</string>
    <string name="ailment_defensedown">Defense Down</string>
    <string name="ailment_frenzy">Frenzy Virus</string>
    <string name="ailment_confusion">Confusion</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_monsters">Monsters</string>
    <string name="title_weapons">Weapons</string>
    <string name="title_armor">Armor</string>
    <string name="title_armor_sets">Armor Sets</string>
    <string name="title_quests">Quests</string>
    <string name="title_items">Items</string>
    <string name="title_palicos">Palicos</string>
    <string name="title_combining">Combining</string>
    <string name="title_locations">Locations</string>
    <string name="title_decorations">Decorations</string>
    <string name="title_skills">Skills</string>
    <string name="title_asb">Armor Set Builder</string>
    <string name="title_wishlists">Wishlists</string>
    <string name="title_talismans">Talismans</string>
    <string name="drawer_group_other">Other</string>
    <string name="drawer_preferences">Settings</string>
    <string name="drawer_feedback">Send Feedback</string>
    <string name="drawer_changelog">Change Log</string>
    <string name="logo_description">Logo</string>
    <string name="option_wishlist_add">Create Wishlist</string>
    <string name="option_wishlist_delete">Delete wishlist</string>
    <string name="option_wishlist_copy">Copy wishlist</string>
    <string name="option_wishlist_rename">Rename wishlist</string>
    <string name="option_wishlist_edit">Edit wishlist</string>
    <string name="option_wishlist_data_add">Add to wishlist</string>
    <string name="option_wishlist_data_edit">Edit quantity</string>
    <string name="option_wishlist_data_delete">Delete from wishlist</string>
    <string name="title_search">Search item</string>
    <string name="title_preferences">Settings</string>
    <string name="monster_image">monster_image</string>
    <string name="monster_damage">monster_damage</string>
    <string name="arena_quests">Arena Quests</string>
    <string name="wishlist">Wishlists</string>
    <string name="dialog_armor_filter_title">Filter</string>
    <string name="armor_filter_label_rank">Rank</string>
    <string name="preference_app_language">App Language</string>
    <string name="preference_app_language_description">
        Use %s as the app language.
        \nDefault will use your system setting if a translation exists, or english if not available.
        Requires a restart.
    </string>
    <string name="preference_app_language_description_disabled">
        App language cannot be overwritten in your android version.
    </string>
    <string name="preference_data_language">Data Language (BETA)</string>
    <string name="preference_data_language_description">
        Show in-game data using %s.
        \nDefault tries to use the app language if available.
    </string>
    <string name="preference_language_default">Default</string>
    <string name="preference_japanese">Show Japanese</string>
    <string name="preference_japanese_description">
        Show Japanese names alongside english ones.
    </string>
    <string name="monster_class_small">Small</string>
    <string name="monster_class_large">Large</string>
    <string name="monster_class_deviant">Deviant</string>
    <string name="monster_detail_tab_summary">Summary</string>
    <string name="monster_detail_tab_damage">Damage</string>
    <string name="monster_summary_weaknesses">Weaknesses</string>
    <string name="monster_ailments">Ailments</string>
    <string name="monster_habitats">Habitats</string>
    <string name="monster_damage_area">Area</string>
    <string name="monster_status_icon">Status</string>
    <string name="monster_status_initial">Initial</string>
    <string name="monster_status_increase">Increase</string>
    <string name="monster_status_max">Max</string>
    <string name="monster_status_duration">Duration</string>
    <string name="monster_status_damage">Damage</string>
    <string name="monster_tooltip_damage_cut">Cut</string>
    <string name="monster_tooltip_damage_impact">Impact</string>
    <string name="monster_tooltip_damage_shot">Shot</string>
    <string name="monster_tooltip_damage_stun">Stun</string>
    <string name="monster_tooltip_damage_fire">Fire</string>
    <string name="monster_tooltip_damage_water">Water</string>
    <string name="monster_tooltip_damage_ice">Ice</string>
    <string name="monster_tooltip_damage_thunder">Thunder</string>
    <string name="monster_tooltip_damage_dragon">Dragon</string>
    <string name="item_detail_tab_detail">Detail</string>
    <string name="item_detail_tab_usage">Usage</string>
    <string name="item_rarity">Rare</string>
    <string name="item_carry_max">Carry Max:</string>
    <string name="item_buy">Buy Price</string>
    <string name="item_sell">Sell Price</string>
    <string name="item_sell_label">Sell Price:</string>
    <string name="item_description">Description</string>
    <string name="item_combinations">Combinations</string>
    <string name="item_crafting">Crafting</string>
    <string name="item_combination_yield">Yields</string>
    <string name="item_gather_fixed">[Fixed]</string>
    <string name="item_gather_common">[Common]</string>
    <string name="item_gather_rare">[Rare]</string>
    <string name="item_gather_full">%2$s %1$s</string>
    <string name="gather_site_bug">Bug</string>
    <string name="equipment_defense">Defense</string>
    <string name="weapon_attack">Attack</string>
    <string name="weapon_affinity">Affinity</string>
    <string name="weapon_sharpness">Sharpness</string>
    <string name="weapon_notes">Notes</string>
    <string name="weapon_phial_type">Phial</string>
    <string name="asb_dialog_name_hint">Set Name</string>
    <string name="asb_dialog_rank">Rank</string>
    <string name="asb_dialog_hunter_type">Hunter Type</string>
    <string name="asb_action_select">Select</string>
    <string name="key">Key</string>
    <string name="urgent">Urgent</string>
    <string name="armor_pieces">Armor Pieces</string>
</resources>