<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/data_row"
            style="@style/cell_column_row">

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/weapon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText=""
                tools:valueText="Blademaster" />

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/rare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/item_rarity"
                tools:valueText="6" />

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/equipment_defense"
                tools:valueText="5~50" />

        </com.google.android.flexbox.FlexboxLayout>

        <FrameLayout
            android:id="@+id/divider2"
            style="@style/SectionDivider" />

        <include android:id="@+id/armor_resits"
            layout="@layout/fragment_armor_resists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"/>

        <LinearLayout
            android:id="@+id/skill_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ghstudios.android.components.SectionHeaderCell
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/skills" />

            <LinearLayout
                android:id="@+id/skill_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider_solid"
                android:showDividers="middle">

                <com.ghstudios.android.components.IconLabelTextCell
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:labelText="Attack"
                    app:valueText="1"
                    tools:visibility="visible" />

                <com.ghstudios.android.components.IconLabelTextCell
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:labelText="Defense"
                    app:valueText="-1"
                    tools:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/piece_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/armor_pieces"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/armor_pieces_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_solid"
            android:showDividers="middle"/>

        <com.ghstudios.android.components.SectionHeaderCell
            android:id="@+id/recipe_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/item_crafting"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.ghstudios.android.components.ItemRecipeCell
            android:id="@+id/recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button android:id="@+id/select_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/asb_action_select"
            android:visibility="gone"
            tools:visibility="visible"
            android:elevation="3dp"
            android:clickable="true"/>

    </LinearLayout>
</ScrollView>
