<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:orientation="vertical">

        <com.ghstudios.android.components.TitleBarCell
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:iconSrc="@drawable/drawer_items"
            tools:titleText="Barrel Bomb L+"/>

        <FrameLayout style="@style/HorizontalDivider"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/data_row"
            style="@style/cell_column_row">

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/rare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/item_rarity"
                tools:valueText="6" />

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/carry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="Carry Max"
                tools:valueText="99" />

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/item_buy"
                tools:valueText="80z" />

            <com.ghstudios.android.components.ColumnLabelTextCell
                android:id="@+id/sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/item_sell"
                tools:valueText="80z" />
        </com.google.android.flexbox.FlexboxLayout>


        <FrameLayout
            style="@style/HorizontalDivider"
            android:layout_marginBottom="@dimen/margin_large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_small_secondary"
                android:layout_marginBottom="4dp"
                android:text="@string/item_description"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_medium"
                android:textColor="@color/weapon_property_color"
                tools:text="Upgraded Large Barrel Bomb. Effective against large monsters."/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
