<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:minWidth="200dp">

    <EditText
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/asb_dialog_name_hint" />

    <TextView
        android:id="@+id/rank_label"
        style="@style/text_medium"
        android:text="@string/asb_dialog_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hunter_type_label"
        style="@style/text_medium"
        android:text="@string/asb_dialog_hunter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintTop_toBottomOf="@id/rank_label"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/label_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="rank_label,hunter_type_label"
        app:barrierDirection="end"/>

    <Spinner
        android:id="@+id/spinner_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@id/rank_label"
        app:layout_constraintStart_toEndOf="@id/label_barrier"/>

    <Spinner
        android:id="@+id/spinner_hunter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@id/hunter_type_label"
        app:layout_constraintStart_toEndOf="@id/label_barrier"/>
</androidx.constraintlayout.widget.ConstraintLayout>
