<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    style="@style/list_item"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_image"
        android:contentDescription="@string/monster_image"
        style="@style/small_image"
        android:src="@drawable/quest_icon_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_medium"
        tools:text="Break things"

        android:maxLines="1"
        app:autoSizeTextType="uniform"

        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/goal"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/label_section"/>

    <TextView
        android:id="@+id/goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_small_secondary"
        tools:text="Break things and Capture a Teostra and cry profusely"

        android:maxLines="1"
        android:ellipsize="end"

        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/label_section"/>


    <LinearLayout
        android:id="@+id/label_section"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/key_badge"
            android:text="@string/key"/>
        <TextView
            android:id="@+id/urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/urgent_badge"
            android:text="@string/urgent"/>
    </LinearLayout>
    

</androidx.constraintlayout.widget.ConstraintLayout>