<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:orientation="vertical">

        <include layout="@layout/fragment_weapon_detail_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="vertical">
            <!--Sharpness-->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/weapon_sharpness" />

            <com.ghstudios.android.components.DrawSharpness
                android:id="@+id/detail_weapon_blade_sharpness"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/detail_weapon_blade_note_text"
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/weapon_notes" />

            <LinearLayout
                android:id="@+id/detail_weapon_note_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_weapon_blade_note1"
                    style="@style/small_image" />

                <ImageView
                    android:id="@+id/detail_weapon_blade_note2"
                    style="@style/small_image" />

                <ImageView
                    android:id="@+id/detail_weapon_blade_note3"
                    style="@style/small_image" />
            </LinearLayout>
            <!--Special Value-->
            <TextView
                android:id="@+id/detail_weapon_blade_special"
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/weapon_phial_type" />

            <TextView
                android:id="@+id/detail_weapon_blade_special_value"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Element" />

            <TextView
                android:id="@+id/detail_weapon_defense_text"
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/weapon_defense" />

            <TextView
                android:id="@+id/detail_weapon_defense"
                style="@style/detail_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10" />

            <!--Description-->
            <TextView
                style="@style/text_small_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/item_description" />

            <TextView
                android:id="@+id/detail_weapon_description"
                style="@style/text_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@color/weapon_property_color"
                tools:text="5" />
        </LinearLayout>

        <include layout="@layout/fragment_weapon_detail_recipe"/>
    </LinearLayout>
</ScrollView>